added base pom (#678) (#679)
* added base pom (#678)

* added base pom

* removed deprecated methods

* wip

* removed DUPed code

* fixes

* bugfix: already http transformed

* wip

* pom stuff

* deprecation warnings

* xxx

* revert

* fix bugs